--- a/index.yaml
+++ b/index.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 entries:
   softhsm:
   - apiVersion: v2
-    created: "2024-03-19T12:17:20.629756642Z"
+    created: "2024-03-19T12:50:21.046234556Z"
     dependencies:
     - name: common
       repository: https://charts.bitnami.com/bitnami
@@ -20,7 +20,7 @@ entries:
       name: MOSIP
     name: softhsm
     type: application
-      #urls:
-      #- https://dpgonaws.github.io/softhsm-on-aws/softhsm-12.0.1-B2.tgz
+    urls:
+    - softhsm-12.0.1-B2.tgz
     version: 12.0.1-B2
-generated: "2024-03-19T12:17:20.6277599Z"
+generated: "2024-03-19T12:50:21.044101083Z"
